# python-project-52

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml
fixtures/: labels.json  statuses.json  tasks.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: Makefile  db.sqlite3  settings.py  test.py  urls.py  views.py
task_manager/apps/labels/: apps.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/apps/statuses/: apps.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py  0002_alter_statuses_options.py  0003_alter_statuses_options.py  0004_alter_statuses_name.py  0005_rename_statuses_status.py  0006_alter_status_options_and_more.py  0007_alter_status_options.py
task_manager/apps/tasks/: admin.py  apps.py  filters.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/apps/users/: admin.py  apps.py  forms.py  models.py  test.py  urls.py  utils.py  views.py
task_manager/fixtures/: users.json
task_manager/task_manager/: settings.py  urls.py
task_manager/templates/crud/: delete.html
task_manager/templates/task_manager/: authentication.html  base.html  index.html  login.html
task_manager/tests/: test_urls.py  test_views.py
task_manager/utils/: texts.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: create_and_update_user.html  delete_user.html  users_list.html
(+21 files in other folders)
