[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["aleksandr_potapkov <Potapkov.a.p@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_52"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

